scripts/aks-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-keycloak-v1
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"    
spec:
  tls:
  - hosts:
      - auth.creativeit.tech
    secretName: secret-ssl-keycloak
  rules:
  - host: auth.creativeit.tech 
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: keycloak-autoparts
            port:
              number: 80
